--- a/index.html
+++ b/index.html
@@ -6,14 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
 
+
 </head>
 <body>
+
     <div class="texto">
         <h1>A Velocidade em Cada Passo</h1>
     </div>
 
     <div class="texto2">
-        <h2>jdjdjdjdj</h2>
+        <h2>A Nike HyperCharge é uma chuteira leve e moderna, com tecnologias TractionX para tração e AirFlowTech para ventilação, unindo conforto, velocidade e estilo em campo.</h2>
+    </div>
+    <div class="botao">
+        <button>Garanta a sua!</button>
     </div>
 </body>
 </html>
